# Nexor_Interpreter

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  Nexor.sln  Nexor.vcxproj  Nexor.vcxproj.filters  README.md  Readme.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  globals.hpp  main.cpp  struct.hpp
src/: Interpreter.cpp  Interpreter.hpp  Metods.cpp  Metods.hpp  Variables_int.cpp  Variables_int.hpp  globals.hpp  main.cpp  struct.hpp
